# fastxfix

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: speed.rs
src/: finder.rs  generic.rs  joiner.rs  lib.rs  neon.rs  x86_simd.rs
