[package]
name = "fastxfix"
version = "0.1.2"
edition = "2024"
description = "Extremely fast prefix/suffix finder for any 2D data type"
documentation = "https://docs.rs/fastxfix"
repository = "https://github.com/silverstillisntgold/fastxfix"
categories = ["algorithms"]
keywords = ["parallelism", "prefix", "simd", "suffix"]
license = "MIT"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rayon = "1.10"

[dev-dependencies]
ya-rand = "1.2"
